# reservation

./: .pre-commit-config.yaml  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: run-lint-and-test.yml
docs/: account.md  analyzing-functional-requirements.md  db.md  reservation.md  scenario.md
webapp/: conftest.py  pytest.ini  utils.py
webapp/account/: api_schema.py  auth.py  const.py  factories.py  models.py  serializers.py  urls.py  views.py
webapp/account/management/commands/: create_default_user.py
webapp/account/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py  0003_remove_user_company_delete_company.py  0004_alter_user_username.py
webapp/config/: urls.py
webapp/config/settings/: base.py  local.py
webapp/reservation/: admin_urls.py  api_schemas.py  const.py  factories.py  filtersets.py  models.py  remainder.py  serializers.py  urls.py  validate.py  validators.py  views.py
webapp/reservation/management/commands/: init_exam_schedule.py
webapp/reservation/migrations/: 0001_initial.py  0002_alter_reservation_options_and_more.py  0003_examschedule_alter_reservation_options_and_more.py  0004_reservation_created_datetime_and_more.py  0005_alter_examschedule_unique_together.py
webapp/tests/account/: __init__.py  conftest.py  test_auth.py  test_commands.py  test_serializers.py  test_views.py
webapp/tests/reservation/: conftest.py  test_commands.py  test_models.py  test_serializers.py  test_views.py
